[gd_scene load_steps=9 format=3 uid="uid://h1culkhhi32u"]

[ext_resource type="Texture2D" uid="uid://cxppeplsqf6ji" path="res://assets/sprites/Discus.png" id="1_qggkj"]
[ext_resource type="Script" path="res://scenes/weapons/bullets/discusBullet.gd" id="1_uh4qs"]
[ext_resource type="AudioStream" uid="uid://dr67i7tqt4uud" path="res://assets/audio/laser-gun-81720.wav" id="2_n65ct"]
[ext_resource type="AudioStream" uid="uid://eodk6ar8ku7o" path="res://assets/audio/bullet_collide.wav" id="2_xt3j4"]

[sub_resource type="CircleShape2D" id="CircleShape2D_il5yb"]
radius = 7.0

[sub_resource type="Gradient" id="Gradient_mk431"]
offsets = PackedFloat32Array(0.0336134, 1)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_av8pn"]
gradient = SubResource("Gradient_mk431")
fill = 1
fill_from = Vector2(0.530055, 0.497268)
fill_to = Vector2(0.693989, 0.327869)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_aco7k"]
properties/0/path = NodePath(".:monitorable")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:monitoring")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("CollisionShape2D:position")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath("CollisionShape2D:rotation")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath("Sprite2D:position")
properties/4/spawn = true
properties/4/replication_mode = 1
properties/5/path = NodePath("Sprite2D:rotation")
properties/5/spawn = true
properties/5/replication_mode = 1
properties/6/path = NodePath(".:initial_scale")
properties/6/spawn = true
properties/6/replication_mode = 1
properties/7/path = NodePath(".:max_scale")
properties/7/spawn = true
properties/7/replication_mode = 1
properties/8/path = NodePath(".:color")
properties/8/spawn = true
properties/8/replication_mode = 1
properties/9/path = NodePath(".:scale_growth_rate")
properties/9/spawn = true
properties/9/replication_mode = 1

[node name="DiscusBullet" type="Area2D"]
z_index = 10
script = ExtResource("1_uh4qs")
phase_sound = ExtResource("2_n65ct")
collision_sound = ExtResource("2_xt3j4")
color = Color(0, 1, 1, 1)
scale_growth_rate = 1.0
damage = 5.0

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_qggkj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_il5yb")

[node name="NormalGetter" type="RayCast2D" parent="."]
position = Vector2(-12, 0)
target_position = Vector2(19, 0)
hit_from_inside = true

[node name="Glow" type="PointLight2D" parent="."]
texture = SubResource("GradientTexture2D_av8pn")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_aco7k")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
